<resources>
    <string name="app_name">NeighbroTaxi</string>
    <string name="version">VERSION: 0.4 (ALPHA)</string>
    <string name="url">http://neighbro-dev.herokuapp.com/</string>
    <string name="title">%1$s</string>
    <string name="hint_name">What\'s your full name?</string>
    <string name="hint_email">Email address?</string>
    <string name="hint_password1">Choose a password!</string>
    <string name="hint_password2">Then, type it again!</string>
    <string name="btn_submit">Let\'s go on!</string>
    <string name="btn_login">Just kidding, I want to login!</string>
    <string name="btn_reg">I\'m a new Neighbro</string>
    <string name="err_name_empty">Don\'t be shy! Give me your name!</string>
    <string name="err_email">Don\'t cheat! Give me a valid address!</string>
    <string name="err_email_empty">So how should I write a letter for you?</string>
    <string name="err_pw_empty">C\'mon, fill it!</string>
    <string name="err_pw_short">It isn\'t enough for me!\n(8–16 characters)</string>
    <string name="err_pw_long">It\'s too much for me!\n(8–16 characters)</string>
    <string name="err_pw_same">Just type it again! \n(Second password must same with first!)</string>
    <string name="note_back">Image of back button.</string>
    <string name="note_menu">Image of menu icon.</string>
    <string name="note_avatar">Picture of user avatar.</string>
    <string name="user_id"/>
    <string name="user_name"/>
    <string name="user_email"/>
    <string-array name="opinions">
        <item><font color="#ffeb3b"><b>SAMPLE USER</b></font></item>
        <item><font color="#ffeb3b">Sample user opinion text here, nothing special!</font></item>
        <item><font color="#ffeb3b"><b>SAMPLE USER</b></font></item>
        <item><font color="#ffeb3b">Sample user opinion text here, nothing special!</font></item>
        <item><font color="#ffeb3b"><b>SAMPLE USER</b></font></item>
        <item><font color="#ffeb3b">Sample user opinion text here, nothing special!</font></item>
    </string-array>
</resources>